@@ -1,5 +1,6 @@
 2020-XX-YY v. 2.1.0
 ---------------------
+- Fixed loop in case of GPG key missing if OnGPGImport is not received
 - Removed MenuButtons and added MenuBar and new menus
 - Cleaning info text if got empty result searching
 - Added use of python regular expression  if searching into pacakge names or summaries.
